--- a/npp.DBcon.dproj
+++ b/npp.DBcon.dproj
@@ -135,6 +135,19 @@
             <Form>fmDBBrowser</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="src\common.pas"/>
+        <DCCReference Include="src\forms\View.pas">
+            <Form>fmView</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="src\forms\Select.pas">
+            <Form>fmSelect</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="src\forms\EditConnect.pas">
+            <Form>fmEditConnect</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -555,6 +568,7 @@
                 <ProjectRoot Platform="Android" Name="$(PROJECTNAME)"/>
                 <ProjectRoot Platform="iOSSimulator" Name="$(PROJECTNAME).app"/>
             </Deployment>
+            <ModelSupport>False</ModelSupport>
         </BorlandProject>
         <ProjectFileVersion>12</ProjectFileVersion>
     </ProjectExtensions>
